# event-substrate

./: .claudeignore  .gitignore  .markdownlint-cli2.yaml  .sqlfluff  .yamllint.yml  AGENT.md  CLAUDE.md  Dockerfile.pyflink  Dockerfile.spark  Dockerfile.spark.base  NOTICE  README.md  Taskfile.yml  architecture.md  architecture.mmd  data_governance_plan.md  docker-compose.yml  learnings.md  productionization.md  pyproject.toml  redpanda-bootstrap.yaml  supabase.json
.antigravity/: rules.md
.claude/: settings.json
.github/: CODEOWNERS
airflow/: Taskfile.yml  pv-local.yaml  values-local.yaml  values-prod.yaml
clickhouse/: init.sql  kafka-sasl.xml
docs/: architecture.md  data_governance_plan.md  data_processing_plan.md  github_cicd_plan.md  learnings.md  productionization.md  two-layer-db-plan.md
flink_jobs/: AGENT.md  CLAUDE.md  Taskfile.yml  credit_balance_processor.sql  login_events_processor.sql  media_notification_processor.sql  signout_events_processor.sql  signup_events_processor.sql  sql_runner.py  unified_events_processor.sql
frontend/: .env.example  CLAUDE.md  Taskfile.yml  eslint.config.js  index.html  main.js  main.smoke.test.js  media.js  media.test.js  package-lock.json  (+3 more)
pyspark_apps/: .dockerignore  AGENT.md  CLAUDE.md  Taskfile.yml  pyproject.toml
pyspark_apps/common/: session.py
pyspark_apps/identity/daily_login_aggregates/: Dockerfile  app.py
pyspark_apps/identity/daily_login_aggregates/tests/: test_transforms.py
pyspark_apps/identity/daily_login_aggregates/tests/fixtures/: expected.json  login_events.json  signup_events.json
(+213 files in other folders)
